--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MR.Delfino Cafe Menü</title>
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Zilla+Slab&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Great+Vibesfamily=Zilla+Slabdisplay=swap"
       rel="stylesheet"
     />
     <!-- Boostrap CDN -->
